--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.61.0",
     "sass-loader": "^13.2.2",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
